--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             />
             <span class="timestamp" id="timestamp">00:00</span>
         </div>
+        <a href="https://www.youtube.com/@FanexaStudio">&copy; FaneXa</a>
         <script src="Scripts/scripts.js"></script>
     </body>
 </html>
