Custom Video player Done

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <video
             id="video"
             class="screen"
-            poster="Assets/img/play-1173495_640.png"
-            src="Assets/videos/Multifandom -- Eyes Closed ft. @ImagineDragons.mp4"
+            src="Assets/videos/Chipi Chipi Chapa Chapa ｜｜ Multifandom.mp4"
         ></video>
         <div class="controls">
             <button id="play" class="btn">
@@ -40,7 +39,12 @@
             />
             <span class="timestamp" id="timestamp">00:00</span>
         </div>
-        <a href="https://www.youtube.com/@FanexaStudio">&copy; FaneXa</a>
+        <a
+            href="https://www.youtube.com/@FanexaStudio"
+            target="_blank"
+            rel="noopener noreferrer"
+            >&copy; Copyright Fanexa</a
+        >
         <script src="Scripts/scripts.js"></script>
     </body>
 </html>
